[package]
authors = ["Aleksei Voronov <despawn@gmail.com>"]
description = "Toy spreadsheet"
name = "spready"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/despawnerer/spready"
readme = "README.md"
build = "build.rs"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
arrayvec = "0.7.2"
lalrpop-util = "0.19.8"
lazy_static = "1.4.0"
regex = "1.5.6"
