[package]
authors = ["Aleksei Voronov <despawn@gmail.com>"]
description = "Toy spreadsheet"
name = "spready"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/despawnerer/spready"
readme = "README.md"
edition = '2021'

[dependencies]
arrayvec = "0.7.2"
chumsky = "0.8.0"
once_cell = "1.12.0"
regex = "1.5.6"
